fix results spacing

--- a/src/app/components/result/result.component.css
+++ b/src/app/components/result/result.component.css
@@ -77,7 +77,6 @@ article ul li .level {
   border-radius: 0.3em;
   font-size: 0.8em;
   margin-right: 0.5em;
-  margin-bottom: 0.5rem;
   text-transform: uppercase;
 }
 
@@ -123,6 +122,7 @@ article ul li .level.critical {
 article li {
   list-style: none;
   display: flex;
+  margin-bottom: .2em;
 }
 
 article li p {
@@ -133,6 +133,7 @@ article li p {
 
 article ul {
   padding-left: 4em;
+  margin-bottom: .8em;
 }
 
 .collapsed {
